--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <header
       class="relative bg-neutral-900 px-4 sm:px-8 py-12 min-h-[60dvh] text-white isolate grid gap-8 place-items-center text-center overflow-hidden">
       <!-- Logo -->
-      <div class="absolute top-6 left-4 sm:top-10 sm:left-10 w-32 sm:w-48">
+      <div class="absolute w-32 top-6 left-4 sm:top-10 sm:left-10 sm:w-48">
         <img
           src="/src/assets/Logo.png"
           alt="Logo Les Petits Plats"
-          class="w-full h-auto object-contain"
+          class="object-contain w-full h-auto"
           loading="lazy" />
       </div>
 
       <!-- Contenu principal -->
       <div
-        class="relative z-10 max-w-2xl w-full flex flex-col items-center gap-6 mt-16 sm:mt-28 px-2">
+        class="relative z-10 flex flex-col items-center w-full max-w-2xl gap-6 px-2 mt-16 sm:mt-28">
         <h1
-          class="font-anton text-yellow-400 uppercase text-xl sm:text-2xl md:text-3xl leading-tight text-balance"
+          class="text-xl leading-tight text-yellow-400 uppercase font-anton sm:text-2xl md:text-3xl text-balance"
           tabindex="0">
           Cherchez parmi plus de 1500 recettes
           <br />
@@ -36,19 +36,19 @@
         </h1>
 
         <!-- Barre de recherche -->
-        <div
-          class="flex items-stretch gap-2 rounded-lg p-2 w-full bg-white focus:outline-none focus-within:ring ring-yellow-300 h-14 sm:h-16">
+        <form
+          class="relative flex items-stretch w-full gap-2 p-2 bg-white rounded-lg focus:outline-none focus-within:ring ring-yellow-300 h-14 sm:h-16">
           <label class="sr-only" for="recipes-search">
             Rechercher une recette
           </label>
           <input
-            class="flex-1 px-4 sm:px-6 outline-none text-gray-500 text-sm sm:text-base"
-            type="search"
+            class="flex-1 px-4 text-sm text-gray-500 outline-none sm:px-6 sm:text-base peer"
+            type="text"
             id="recipes-search"
             placeholder="Rechercher une recette, un ingrédient, ..."
             data-recipes-search />
           <button
-            class="w-10 sm:w-12 h-10 sm:h-12 rounded-lg bg-neutral-900 text-white hover:bg-yellow-400 hover:text-neutral-900 transition"
+            class="w-10 h-10 text-white transition rounded-lg sm:w-12 sm:h-12 bg-neutral-900 hover:bg-yellow-400 hover:text-neutral-900"
             aria-label="Lancer la recherche">
             <svg
               class="m-auto"
@@ -66,14 +66,111 @@
                 stroke="currentColor" />
             </svg>
           </button>
-        </div>
+          <button
+            type="reset"
+            class="absolute flex items-center justify-center w-4 h-4 transform -translate-y-1/2 rounded-lg cursor-pointer text-grey-800 right-20 top-1/2 peer-placeholder-shown:hidden">
+            <img
+              src="/src/assets/icons/btn-input-close.svg"
+              alt="bouton supprimer" />
+          </button>
+        </form>
       </div>
 
       <!-- Image de fond -->
       <img
-        class="absolute inset-0 -z-10 w-full h-full object-cover object-center"
+        class="absolute inset-0 object-cover object-center w-full h-full -z-10"
         src="/src/assets/img/hero-background.jpg"
         alt="Image de fond" />
     </header>
+
+    <!-- Dropdown -->
+    <aside class="p-9">
+      <h2 class="sr-only">Filtres et options</h2>
+      <div class="flex flex-col items-center justify-between md:flex-row">
+        <div
+          class="flex flex-col justify-between sm:flex-row gap-y-2 sm:gap-y-0 gap-x-6 min-w-52">
+          <button
+            type="button"
+            class="inline-flex items-center justify-center w-full px-3 py-4 bg-white rounded-lg shadow-xs gap-x-14 ring-1 ring-gray-300 ring-inset hover:bg-gray-50"
+            aria-expanded="true"
+            aria-haspopup="true">
+            Ingrédients
+            <svg
+              width="15"
+              height="8"
+              viewBox="0 0 15 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 1L7.5 7L14 1"
+                stroke="#1B1B1B"
+                stroke-linecap="round" />
+            </svg>
+          </button>
+          <button
+            type="button"
+            class="inline-flex items-center justify-center w-full px-3 py-4 bg-white rounded-lg shadow-xs gap-x-14 ring-1 ring-gray-300 ring-inset hover:bg-gray-50"
+            aria-expanded="true"
+            aria-haspopup="true">
+            Appareils
+            <svg
+              width="15"
+              height="8"
+              viewBox="0 0 15 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 1L7.5 7L14 1"
+                stroke="#1B1B1B"
+                stroke-linecap="round" />
+            </svg>
+          </button>
+          <button
+            type="button"
+            class="inline-flex items-center justify-center w-full px-3 py-4 bg-white rounded-lg shadow-xs gap-x-14 ring-1 ring-gray-300 ring-inset hover:bg-gray-50"
+            aria-expanded="true"
+            aria-haspopup="true">
+            Ustensiles
+            <svg
+              width="15"
+              height="8"
+              viewBox="0 0 15 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 1L7.5 7L14 1"
+                stroke="#1B1B1B"
+                stroke-linecap="round" />
+            </svg>
+          </button>
+        </div>
+        <span class="mt-4 font-anton md:mt-0">1500 recettes</span>
+      </div>
+      <!-- Filtres -->
+      <ul>
+        <li>
+          <button
+            type="button"
+            class="inline-flex items-center px-3 py-4 mt-3 bg-yellow-400 rounded-lg shadow-xs gap-x-8 ring-1 ring-gray-300 ring-inset"
+            aria-expanded="true"
+            aria-haspopup="true">
+            Crème de coco
+            <svg
+              width="14"
+              height="13"
+              viewBox="0 0 14 13"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M12 11.5L7 6.5M7 6.5L2 1.5M7 6.5L12 1.5M7 6.5L2 11.5"
+                stroke="#1B1B1B"
+                stroke-width="2.16667"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </button>
+        </li>
+      </ul>
+    </aside>
   </body>
 </html>
