feat(recipeCard): implement recipe card with local JSON data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Les Petits Plats</title>
 
     <link rel="prefetch" href="/src/assets/Logo.png" />
-    <link rel="prefetch" href="/src/assets/img/hero-background.jpg" />
+    <link rel="prefetch" href="/public/img/hero-background.jpg" />
     <link rel="stylesheet" href="/src/css/output.css" />
   </head>
   <body class="bg-neutral-200">
@@ -79,7 +79,7 @@
       <!-- Image de fond -->
       <img
         class="absolute inset-0 object-cover object-center w-full h-full -z-10"
-        src="/src/assets/img/hero-background.jpg"
+        src="/public/img/hero-background.jpg"
         alt="Image de fond" />
     </header>
 
@@ -343,175 +343,9 @@
 
     <!-- Section des cards -->
     <section class="px-24 py-8 mx-auto mb-12">
-      <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-        <!-- Carte 1 -->
-        <article class="relative overflow-hidden bg-white shadow-lg rounded-xl">
-          <!-- Badge Durée -->
-          <span
-            class="absolute self-end inline-block px-2 py-1 text-sm bg-yellow-400 rounded-full top-6 right-5 text-neutral-900">
-            60min
-          </span>
-          <img
-            src="/src/assets/img/Recette01.jpg"
-            alt="Limonade de coco"
-            class="object-cover w-full h-72" />
-
-          <!-- Contenu de la carte -->
-          <div class="flex flex-col gap-4 p-4">
-            <h3 class="text-lg font-bold font-anton">Limonade de coco</h3>
-
-            <p class="text-xs font-semibold tracking-wider text-gray-400">
-              RECETTE
-            </p>
-            <p class="text-sm leading-relaxed text-gray-700">
-              Mettre les glaçons à votre goût dans le blender, ajouter le lait,
-              la crème de coco, le jus de 2 citrons et le sucre. Mixer jusqu'à
-              avoir la consistence désirée.
-            </p>
-
-            <div class="mt-5">
-              <p class="text-xs font-semibold tracking-wider text-gray-400">
-                INGREDIENTS
-              </p>
-            </div>
-            <ul
-              class="grid grid-cols-2 gap-4 space-y-1 text-sm text-gray-600 list-none">
-              <li class="flex flex-col">
-                <strong>Lait de coco</strong>
-                <span class="font-normal text-gray-400">400ml</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Jus de citron</strong>
-                <span class="font-normal text-gray-400">2</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Créme de coco</strong>
-                <span class="font-normal text-gray-400">4 cuillères</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Sucre</strong>
-                <span class="font-normal text-gray-400">20g</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Glaçons</strong>
-                <span class="font-normal text-gray-400">2</span>
-              </li>
-            </ul>
-          </div>
-        </article>
-
-        <!-- Carte 2 -->
-        <article class="relative overflow-hidden bg-white shadow-lg rounded-xl">
-          <!-- Badge Durée -->
-          <span
-            class="absolute self-end inline-block px-2 py-1 text-sm bg-yellow-400 rounded-full top-6 right-5 text-neutral-900">
-            60min
-          </span>
-          <img
-            src="/src/assets/img/Recette01.jpg"
-            alt="Limonade de coco"
-            class="object-cover w-full h-72" />
-
-          <!-- Contenu de la carte -->
-          <div class="flex flex-col gap-4 p-4">
-            <h3 class="text-lg font-bold font-anton">Limonade de coco</h3>
-
-            <p class="text-xs font-semibold tracking-wider text-gray-400">
-              RECETTE
-            </p>
-            <p class="text-sm leading-relaxed text-gray-700">
-              Mettre les glaçons à votre goût dans le blender, ajouter le lait,
-              la crème de coco, le jus de 2 citrons et le sucre. Mixer jusqu'à
-              avoir la consistence désirée.
-            </p>
-
-            <div class="mt-5">
-              <p class="text-xs font-semibold tracking-wider text-gray-400">
-                INGREDIENTS
-              </p>
-            </div>
-            <ul
-              class="grid grid-cols-2 gap-4 space-y-1 text-sm text-gray-600 list-none">
-              <li class="flex flex-col">
-                <strong>Lait de coco</strong>
-                <span class="font-normal text-gray-400">400ml</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Jus de citron</strong>
-                <span class="font-normal text-gray-400">2</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Créme de coco</strong>
-                <span class="font-normal text-gray-400">4 cuillères</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Sucre</strong>
-                <span class="font-normal text-gray-400">20g</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Glaçons</strong>
-                <span class="font-normal text-gray-400">2</span>
-              </li>
-            </ul>
-          </div>
-        </article>
-
-        <!-- Carte 3 -->
-        <article class="relative overflow-hidden bg-white shadow-lg rounded-xl">
-          <!-- Badge Durée -->
-          <span
-            class="absolute self-end inline-block px-2 py-1 text-sm bg-yellow-400 rounded-full top-6 right-5 text-neutral-900">
-            60min
-          </span>
-          <img
-            src="/src/assets/img/Recette01.jpg"
-            alt="Limonade de coco"
-            class="object-cover w-full h-72" />
-
-          <!-- Contenu de la carte -->
-          <div class="flex flex-col gap-4 p-4">
-            <h3 class="text-lg font-bold font-anton">Limonade de coco</h3>
-
-            <p class="text-xs font-semibold tracking-wider text-gray-400">
-              RECETTE
-            </p>
-            <p class="text-sm leading-relaxed text-gray-700">
-              Mettre les glaçons à votre goût dans le blender, ajouter le lait,
-              la crème de coco, le jus de 2 citrons et le sucre. Mixer jusqu'à
-              avoir la consistence désirée.
-            </p>
-
-            <div class="mt-5">
-              <p class="text-xs font-semibold tracking-wider text-gray-400">
-                INGREDIENTS
-              </p>
-            </div>
-            <ul
-              class="grid grid-cols-2 gap-4 space-y-1 text-sm text-gray-600 list-none">
-              <li class="flex flex-col">
-                <strong>Lait de coco</strong>
-                <span class="font-normal text-gray-400">400ml</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Jus de citron</strong>
-                <span class="font-normal text-gray-400">2</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Créme de coco</strong>
-                <span class="font-normal text-gray-400">4 cuillères</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Sucre</strong>
-                <span class="font-normal text-gray-400">20g</span>
-              </li>
-              <li class="flex flex-col">
-                <strong>Glaçons</strong>
-                <span class="font-normal text-gray-400">2</span>
-              </li>
-            </ul>
-          </div>
-        </article>
-      </div>
+      <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3"></div>
     </section>
+    <!-- Load main script -->
+    <script type="module" src="/src/js/app.js"></script>
   </body>
 </html>
