feat: add live search inside tag dropdowns

--- a/index.html
+++ b/index.html
@@ -85,260 +85,17 @@
 
     <!-- Dropdowns de filtres -->
     <aside class="px-24 py-8">
-      <!-- Titre caché pour l'accessibilité -->
       <h2 class="sr-only">Filtres et options</h2>
       <div class="flex flex-col items-center justify-between md:flex-row">
         <div
-          class="flex flex-col justify-between group sm:flex-row gap-y-2 sm:gap-y-0 gap-x-6 min-w-52">
-          <!-- Premier dropdown : Ingrédients -->
-          <div class="max-w-xs mx-auto my-4">
-            <details class="relative bg-white rounded-lg shadow-xs group">
-              <summary
-                class="flex items-center justify-between p-4 list-none cursor-pointer gap-x-14">
-                <span>Ingrédients</span>
-                <!-- Icône flèche (rotation avec group-open) -->
-                <svg
-                  class="w-4 h-4 transition-transform transform group-open:rotate-180"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  viewBox="0 0 24 24">
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M19 9l-7 7-7-7" />
-                </svg>
-              </summary>
-
-              <div
-                class="absolute left-0 right-0 z-20 -mt-3 bg-white rounded-b-lg shadow-lg top-full">
-                <!-- Barre de recherche -->
-                <div class="relative w-32 px-4 pt-3 mb-3">
-                  <!-- Icône loupe  -->
-                  <svg
-                    class="absolute w-4 h-4 text-gray-400 left-[9.5rem] top-6"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    viewBox="0 0 24 24">
-                    <circle cx="11" cy="11" r="8" />
-                    <line x1="21" y1="21" x2="16.65" y2="16.65" />
-                  </svg>
-                  <input
-                    type="search"
-                    class="w-40 py-2 pl-2 pr-8 text-sm text-gray-500 border rounded focus:outline-none focus:ring-1 focus:ring-yellow-400" />
-                </div>
-
-                <!-- Liste des ingrédients -->
-                <ul class="text-sm text-gray-700">
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Jus de citron
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Glaçons
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Tomate
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Poulet
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Poivron rouge
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Thon en miettes
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Vinaigrette
-                  </li>
-                </ul>
-              </div>
-            </details>
-          </div>
-
-          <!-- Deuxième dropdown : Appareils -->
-          <div class="max-w-xs mx-auto my-4">
-            <details class="relative bg-white rounded-lg shadow-xs group">
-              <summary
-                class="flex items-center justify-between p-4 list-none cursor-pointer gap-x-14">
-                <span>Appareils</span>
-                <!-- Icône flèche (rotation avec group-open) -->
-                <svg
-                  class="w-4 h-4 transition-transform transform group-open:rotate-180"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  viewBox="0 0 24 24">
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M19 9l-7 7-7-7" />
-                </svg>
-              </summary>
-
-              <div
-                class="absolute left-0 right-0 z-20 -mt-3 bg-white rounded-b-lg shadow-lg top-full">
-                <!-- Barre de recherche -->
-                <div class="relative w-32 px-4 pt-3 mb-3">
-                  <!-- Icône loupe -->
-                  <svg
-                    class="absolute w-4 h-4 text-gray-400 left-[8.5rem] top-6"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    viewBox="0 0 24 24">
-                    <circle cx="11" cy="11" r="8" />
-                    <line x1="21" y1="21" x2="16.65" y2="16.65" />
-                  </svg>
-                  <input
-                    type="search"
-                    class="py-2 pl-2 pr-8 text-sm text-gray-500 border rounded w-36 focus:outline-none focus:ring-1 focus:ring-yellow-400" />
-                </div>
-
-                <!-- Liste des ingrédients -->
-                <ul class="text-sm text-gray-700">
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Jus de citron
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Glaçons
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Tomate
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Poulet
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Poivron rouge
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Thon en miettes
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Vinaigrette
-                  </li>
-                </ul>
-              </div>
-            </details>
-          </div>
-
-          <!-- Troisième dropdown : Ustensiles -->
-          <div class="max-w-xs mx-auto my-4">
-            <details class="relative bg-white rounded-lg shadow-xs group">
-              <summary
-                class="flex items-center justify-between p-4 list-none cursor-pointer gap-x-14">
-                <span>Ustensiles</span>
-                <!-- Icône flèche (rotation avec group-open) -->
-                <svg
-                  class="w-4 h-4 transition-transform transform group-open:rotate-180"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  viewBox="0 0 24 24">
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M19 9l-7 7-7-7" />
-                </svg>
-              </summary>
-
-              <div
-                class="absolute left-0 right-0 z-20 -mt-3 bg-white rounded-b-lg shadow-lg top-full">
-                <!-- Barre de recherche -->
-                <div class="relative w-32 px-4 pt-3 mb-3">
-                  <!-- Icône loupe  -->
-                  <svg
-                    class="absolute w-4 h-4 text-gray-400 left-36 top-6"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    viewBox="0 0 24 24">
-                    <circle cx="11" cy="11" r="8" />
-                    <line x1="21" y1="21" x2="16.65" y2="16.65" />
-                  </svg>
-                  <input
-                    type="search"
-                    class="py-2 pl-2 pr-8 text-sm border text-gray-500 rounded w-[9.5rem] focus:outline-none focus:ring-1 focus:ring-yellow-400" />
-                </div>
-
-                <!-- Liste des ingrédients -->
-                <ul class="text-sm text-gray-700">
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Jus de citron
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Glaçons
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Tomate
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Poulet
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Poivron rouge
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Thon en miettes
-                  </li>
-                  <li
-                    class="w-full px-4 py-2 transition cursor-pointer focus:visible:outline2 -outline-offset-2 outline-yellow-400 hover:bg-yellow-400">
-                    Vinaigrette
-                  </li>
-                </ul>
-              </div>
-            </details>
-          </div>
+          class="flex flex-col justify-between group sm:flex-row gap-y-2 sm:gap-y-0 gap-x-6 min-w-52"
+          data-filters>
+          <!-- Les dropdowns seront injectés ici -->
         </div>
         <span class="mt-4 font-anton md:mt-0">1500 recettes</span>
       </div>
-      <!-- Filtres -->
-      <ul>
-        <li>
-          <button
-            type="button"
-            class="inline-flex items-center px-3 py-4 mt-3 bg-yellow-400 rounded-lg shadow-xs min-w-44 gap-x-8"
-            aria-expanded="true"
-            aria-haspopup="true">
-            Crème de coco
-            <svg
-              width="14"
-              height="13"
-              viewBox="0 0 14 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M12 11.5L7 6.5M7 6.5L2 1.5M7 6.5L12 1.5M7 6.5L2 11.5"
-                stroke="#1B1B1B"
-                stroke-width="2.16667"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </button>
-        </li>
-      </ul>
+      <!-- Conteneur des badges -->
+      <div class="flex flex-wrap gap-2 mt-4" data-selected-tags></div>
     </aside>
 
     <!-- Section des cards -->
